--- a/assets/scss/_ads.scss
+++ b/assets/scss/_ads.scss
@@ -1,4 +1,4 @@
-// scss-lint:disable ImportantRule, IdSelector
+// stylelint-disable selector-max-id
 
 //
 // Carbon ads
@@ -34,5 +34,5 @@
 
 .carbon-poweredby {
   display: block;
-  color: #777 !important;
+  color: #777 !important; // stylelint-disable-line declaration-no-important
 }
